# zenith

./: Cargo.toml  README.md  check-all.sh  flake.nix  justfile  rust-analyzer.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
firmware/: Cargo.toml
firmware/src/: board.rs  can.rs  lib.rs  links.rs  sensors.rs  vehicle.rs
firmware/src/links/: can_probe.rs  ethernet.rs  interfaces.rs  protocols.rs  vehicle.rs
firmware/src/links/interfaces/: ethernet.rs  lora.rs  usb.rs
firmware/src/links/protocols/: can_probe.rs  commands.rs  link_quality.rs  modes.rs
firmware/src/sensors/: bmp580.rs  h3lis.rs  icm42670p.rs  icm42688p.rs  lis3.rs  lps22.rs  lsm6.rs  ms56.rs  power.rs
links/: Cargo.toml
links/src/: lib.rs
links/src/protocols/: commands.rs  link_quality.rs  mod.rs  modes.rs
mission/: Cargo.toml
mission/src/: flight_logic.rs  lib.rs  mavlink.rs  propulsion.rs  settings.rs  telemetry.rs  traits.rs  vehicle.rs
sitl/: Cargo.toml  tap.sh
sitl/src/: lib.rs  main.rs  networking.rs  sensors.rs  simulation.rs
sitl/src/simulation/: battery.rs  hybrid.rs  outputs.rs  physics.rs  sensors.rs
sitl/src/simulation/hybrid/: fluid.rs  tank.rs  two_phase.rs  valves.rs
sitl/tests/: outputs.rs  settings.rs  state_machine.rs
sitl/tests/common/: mod.rs
state_estimator/: Cargo.toml
state_estimator/benches/: bench.rs
state_estimator/src/: lib.rs
telemetry/: Cargo.toml
telemetry/src/: config.rs  downlink.rs  lib.rs  messages.rs
telemetry/src/messages/: downlink.rs  uplink.rs
telemetry/src/trx/: receiver.rs  transmitter.rs
utils/: Cargo.toml
utils/src/: anychannel.rs  lib.rs
