[workspace]
resolver = "2"
members = [
    "state_estimator",
    "telemetry",
    "firmware",
]
default-members = ["firmware"]

# We specify dependencies we use in multiple places here, so we can make sure
# every crate uses the same version.
[workspace.dependencies]
firmware = { path = "firmware" }
state_estimator = { path = "state_estimator" }
telemetry = { path = "telemetry" }

nalgebra = { version = "0.32", default-features = false, features = ["macros", "libm", "mint", "serde-serialize-no-std"] }

rapid-dialect = { git = "https://github.com/tudsat-rocket/rapid-dialect" }
#rapid-dialect = { path = "../rapid-dialect" }

[profile.release]
debug = 2
