[package]
name = "firmware"
version = "0.1.0"
edition = "2024"
default-run = "rocket"

[[bin]]
name = "rocket"
path = "src/bin/rocket.rs"

[[bin]]
name = "gcs"
path = "src/bin/gcs.rs"
required-features = ["gcs"]

[[bin]]
name = "selftest"
path = "src/bin/selftest.rs"

[features]
default = []
gcs = []

[dependencies]
state_estimator = { workspace = true }
telemetry = { workspace = true }

thiserror = { workspace = true }
nalgebra = { workspace = true }
heapless = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }

#panic-probe = "0.3" # print-defmt is really useful for debugging, but dramatically increases binary size
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-can = { workspace = true }
embedded-nal-async = { workspace = true }
embedded-io-async = { workspace = true }
embedded-storage-async = { workspace = true }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

embassy-embedded-hal = { workspace = true }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }

embassy-executor = { version = "0.9", features = ["defmt", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-stm32 = {  version = "0.4", features = ["stm32h743vi", "unstable-pac", "memory-x", "time-driver-tim15", "exti"] }
embassy-usb = { version = "0.5", features = ["defmt"] }
embassy-net = { version = "0.7", features = ["defmt", "udp", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv4", "dns"] }

lora-phy = { workspace = true }

mavio = { version = "0.5.10", features = ["dlct-common"] }

static_cell = "2"
num-traits = { version = "0.2.15", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = "1.0"
crc = "3"
siphasher = { version = "0.3", default-features = false }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
bitflags = "2.9.1"

rapid-dialect = { workspace = true }
