[package]
name = "links"
version = "0.1.0"
edition = "2024"

[features]
hybrid = []

[dependencies]
rapid-dialect = { workspace = true }
mavio = { version = "0.5.10", features = ["dlct-common"] }
heapless = { workspace = true }

embassy-time = { workspace = true }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }

log = { workspace = true }

[lints]
workspace = true
