[package]
name = "sitl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sitl"
path = "src/main.rs"

[features]
default = ["hybrid"]
hybrid = ["mission/hybrid", "links/hybrid"]

[dependencies]
state_estimator = { path = "../state_estimator" }
links = { workspace = true }
mission = { workspace = true }
rapid-dialect = { workspace = true }

mavio = { version = "0.5.10", features = ["dlct-common"] }
nalgebra = { workspace = true, features = ["std"] }
heapless = { workspace = true }
num-traits = { version = "0.2.15" }

embassy-executor = { version = "0.9", features = ["log", "arch-std", "executor-thread"] }
embassy-time = { workspace = true, features = ["std"] }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-net = { version = "0.7", features = ["log", "udp", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv4", "dns"] }
embassy-net-tuntap = { workspace = true }

critical-section = { workspace = true }
static_cell = "2"
log = { workspace = true }
env_logger = { workspace = true }
rand = "0.8"

[lints]
workspace = true
