[package]
name = "telemetry"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }
links = { workspace = true }
rapid-dialect = { workspace = true }

defmt = { workspace = true }
heapless = { workspace = true }
thiserror = { workspace = true }

half = { version = "2.7.1", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", default-features = false }

embassy-time = { workspace = true }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }

lora-phy = { workspace = true }

rand = { version = "0.9.2", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
siphasher = "1.0.1"

[lints]
workspace = true
